# graphql-rust

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  person.rs  user.rs
entity/src/dtos/: mod.rs  person_dto.rs  user_dto.rs
entity/src/utils/: graphql_validation.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241114_233954_create_table_user.rs  m20241115_013940_create_table_person.rs
src/: main.rs  server.rs
src/auth/: context.rs  guards.rs  jwt.rs  mod.rs  permissions.rs
src/graphql/: mod.rs  person_mutations.rs  person_queries.rs  user_mutations.rs  user_queries.rs
src/repository/: mod.rs  person_repository.rs  user_repository.rs
