[package]
name = "graphql-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.7.7"
async-graphql = "7.0.11"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
async-graphql-axum = "7.0.11"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.41.1", features = ["full"] }
dotenv = "0.15.0"
cuid2 = "0.1.3"
serde = { version = "1.0.215", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["cors"] }
jsonwebtoken = "9.3.0"
entity = { path = "entity" }
migration = { path = "migration" }
chrono = "0.4.38"
async-trait = "0.1.83"
